--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <li>Large meals in the evening</li>
     <li>Artificial lights in the evening</li>
     <li>Alcohol before bedtime</li>
-    <li>Avoid meditation.  Yes I realize that this seems counterintuitive.  One of my doctors suggested I try meditation, which I did religiously every day for a year (following the Gupta Program), and while it took the edge off of my suffering it did not nothing to resolve my insomina.  Now I know that it likely worsened my insomnia.  Here's <a href="https://youtu.be/KpZBENXzutM?t=201">an explanation</a>.</li>
+    <li>Avoid meditation.  Yes I realize that this seems counterintuitive.  One of my doctors suggested that I try meditation, which I did religiously every day for a year (following the Gupta Program), and while it took the edge off of my suffering it did nothing to resolve my insomina.  Now I know that it likely worsened my insomnia.  Here's <a href="https://youtu.be/KpZBENXzutM?t=201">an explanation</a>.</li>
   </ul>
   
   <p>If you find that your mind is busy while you're in bed, then keep a notepad and pen within reach.  When your mind is obsessing about something just reach over and grab the notepad and pen, in the dark, without turning on the light, and jot down a few words about whatever it is.  Usually two or three words is enough, and it's easy to write them in the dark.  This way you have enough information to remind yourself about this topic in the morning and this will enable your mind to relax because it now knows that you won't forget to deal with whatever it is.</p>
