--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <li>Large meals in the evening</li>
     <li>Artificial lights in the evening</li>
     <li>Alcohol before bedtime</li>
-    <li>Avoid meditation, or if you do meditate then keep it to <a href="https://youtu.be/WdmvoX1RZWA?t=828">less than half an hour and less than every day</a>.  It turns out that too much meditation <a href="https://youtu.be/KpZBENXzutM?t=201">may cause sleep issues</a>.</li>
+    <li>Avoid meditating too frequently or for too long.  If you do meditate then keep it to <a href="https://youtu.be/WdmvoX1RZWA?t=828">less than half an hour and less than every day</a>.  It turns out that too much meditation <a href="https://youtu.be/KpZBENXzutM?t=201">may cause sleep issues</a>.</li>
   </ul>
   
   <h2>Sunrise/Sunset Viewing Technique to Strengthen your Circadian Rhythm</h2>
