--- a/index.html
+++ b/index.html
@@ -215,5 +215,8 @@
   });
 </script>
 
+<script defer src="https://cdn.commento.io/js/commento.js"></script>
+<div id="commento"></div>
+  
 </body>
 </html>
