--- a/index.html
+++ b/index.html
@@ -196,9 +196,14 @@
   <p>Disclaimer:  I am not a doctor.  The contents of this site should not be considered to be medical advice.  Seek the counsel of a medical professional before you make any changes that may affect your health.</p>
   <p>The contents of this website, <a href="https://drugfreesleep.org" target="_blank">drugfreesleep.org</a>, are Copyright (c) 2024 by NSB, all rights reserved.  Licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons license (CC BY-NC-SA 4.0).</a></p>
 
+  <div>
+  <script defer src="https://cdn.commento.io/js/commento.js"></script>
+  <div id="commento"></div>
+  </div>
+
 
 </div>
-
+  
 <script>
   const toggleButton = document.getElementById('toggleTheme');
   let darkTheme = true; // Default theme is dark
@@ -214,9 +219,6 @@
     darkTheme = !darkTheme;
   });
 </script>
-
-<script defer src="https://cdn.commento.io/js/commento.js"></script>
-<div id="commento"></div>
   
 </body>
 </html>
