--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
   <h1 style="text-align: center;">Escaping Insomnia's Anxiety Trap</h1>
 
-  <p style="text-align: center;"><b>TLDR:</b> Lateral Eye Movement can Halt Anxiety</p>
-  <p style="text-align: center;"><b>TLDR:</b> Update: Feel free to leave comments at the bottom</p>
+  <p style="text-align: center;"><b>TLDR:</b>Lateral Eye Movement can Halt Anxiety</p>
+  <p style="text-align: center;"><b>UPDATE:</b>Feel free to leave comments at the bottom</p>
 
   <h2>Article Summary</h2>
   
