--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
  
   <br>
   <p>Disclaimer:  I am not a doctor.  The contents of this site should not be considered to be medical advice.  Seek the counsel of a medical professional before you make any changes that may affect your health.</p>
-  <p id="comments">The contents of this website, <a href="https://drugfreesleep.org">drugfreesleep.org</a>, excluding all comments, are Copyright (c) 2024 by NSB, all rights reserved.  Licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons license (CC BY-NC-SA 4.0).</a>  By adding any comments you agree that your comments cannot be copyrighted by anyone and are therefore public domain.</p>
+  <p>The contents of this website, <a href="https://drugfreesleep.org">drugfreesleep.org</a>, excluding all comments, are Copyright (c) 2024 by NSB, all rights reserved.  Licensed under the <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons license (CC BY-NC-SA 4.0).</a>  By adding any comments you agree that your comments cannot be copyrighted by anyone and are therefore public domain.</p>
 
   <br>
   <br>
-  <div>
+  <div id="comments">
   <script defer src="https://cdn.commento.io/js/commento.js"></script>
   <div id="commento"></div>
   </div>
