--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
   <div id="commento"></div>
   </div>
 
+  <a href="#">Back to Top</a>
 
 </div>
   
@@ -222,6 +223,8 @@
     darkTheme = !darkTheme;
   });
 </script>
+
+
   
 </body>
 </html>
