--- a/index.html
+++ b/index.html
@@ -204,7 +204,10 @@
   <div id="commento"></div>
   </div>
 
-  <a href="#">Back to Top</a>
+  <br>
+  <div style="text-align: center;">
+      <a href="#">Back to Top</a>
+  </div>
 
 </div>
   
