--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 
   <br>
   <div style="text-align: center;">
-      <a href="#">Back to Top</a>
+      <a href="#" style="font-size: 24px; font-weight: bold;">Back to Top</a>
   </div>
-
+  
 </div>
   
 <script>
