--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h1 style="text-align: center;">Escaping Insomnia's Anxiety Trap</h1>
 
   <p style="text-align: center;"><b>TLDR:</b> Lateral Eye Movement can Halt Anxiety</p>
-  <p style="text-align: center;"><b>UPDATE:</b> Feel free to leave <a href="#comments">comments at the bottom</a></p>
+  <p style="text-align: center;"><b>UPDATE:</b> Feel free to leave civil <a href="#comments">comments at the bottom</a></p>
 
   <h2>Article Summary</h2>
   
