--- a/testgoogle.html
+++ b/testgoogle.html
@@ -12,8 +12,8 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="text-center p-8 bg-white rounded-lg shadow-lg">
+<body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen py-8">
+    <div class="text-center p-8 bg-white rounded-lg shadow-lg mb-8">
         <h1 class="text-2xl font-bold text-gray-800 mb-4">Here is the thumbnail:</h1>
         <!-- 
           This is the image tag. 
@@ -39,7 +39,7 @@
           src="https://lh3.googleusercontent.com/p/AF1QipNBkAp919VxWrd-ZYGbsIm3fu9MYBKPTNqAnS_R=s557-k-no" 
           alt="Thanksgiving Point"
           class="rounded-md mx-auto"
-          onerror="this.onerror=null;this.src='https://placehold.co/203x105/eee/ccc?text=Image+Not+Found';"
+          onerror="this.onerror=null;this.src='https://placehold.co/557/eee/ccc?text=Image+Not+Found';"
         >
     </div>
 </body>
