--- a/testmaps.html
+++ b/testmaps.html
@@ -11,7 +11,7 @@
     <p>This is an iframe loading the requested content:</p>
 
     <iframe 
-        src="maps.google.com"
+        src="https://maps.google.com"
         width="600" 
         height="450" 
         style="border:0;" 
