--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
   <p style="text-align: center;"><b>TLDR:</b> Lateral Eye Movement can Halt Anxiety</p>
 
   <h2>Article Summary</h2>
+
+  <p>I believe the most important methods discusse here are the Lateral Eye Movement (LEM) and Practicing Acceptance.  The other stuff can be helpful, certainly, but if you take anything from this article then those are the two to focus on.</p>
   
   <p>This article is intended for individuals who have already explored and eliminated, with the help of a sleep specialist and typically through an overnight sleep study, potential physiological causes of sleep disturbance such as sleep apnea, UARS, nasal valve collapse, deviated septum, etc. In other words, this article is intended for the rest of us, who don't have physical/structural issues but have entrenched insomnia and for whom this condition is causing extreme anxiety, fear, stress, panic, etc., and who are seeking drug-free methods which may help.</p>
   
