added unsplash image
Added an image from unsplash.com with error handling.

--- a/testgoogle.html
+++ b/testgoogle.html
@@ -42,5 +42,21 @@
           onerror="this.onerror=null;this.src='https://placehold.co/557/eee/ccc?text=Image+Not+Found';"
         >
     </div>
+
+    <div class="text-center p-8 bg-white rounded-lg shadow-lg">
+        <h1 class="text-2xl font-bold text-gray-800 mb-4">Here is an image from unsplash.com:</h1>
+        <!-- 
+          This is the image tag. 
+          The 'src' attribute points to the URL you provided.
+          The 'alt' attribute provides alternative text for screen readers.
+        -->
+        <img 
+          src="https://unsplash.com/photos/steam-train-crossing-a-stone-viaduct-in-a-scenic-landscape-db35dVpZlQw" 
+          alt="Unsplash image"
+          class="rounded-md mx-auto"
+          onerror="this.onerror=null;this.src='https://placehold.co/557/eee/ccc?text=Image+Not+Found';"
+        >
+    </div>
+    
 </body>
 </html>
