added google photos share URL

--- a/testgoogle.html
+++ b/testgoogle.html
@@ -51,7 +51,7 @@
           The 'alt' attribute provides alternative text for screen readers.
         -->
         <img 
-          src="https://unsplash.com/photos/steam-train-crossing-a-stone-viaduct-in-a-scenic-landscape-db35dVpZlQw" 
+          src="https://photos.google.com/share/AF1QipNzG7RkBMmA6Qn79vlXdnkqCEbhS455hjemAFn2JNU4jQh3AwEipNcOwoO0KxBGGA?key=ek8yOGMzcC1kdGlyVXZvWllnaVdOaGJtRXNIZTR3" 
           alt="Unsplash image"
           class="rounded-md mx-auto"
           onerror="this.onerror=null;this.src='https://placehold.co/557/eee/ccc?text=Image+Not+Found';"
