--- a/testgoogle.html
+++ b/testgoogle.html
@@ -44,14 +44,14 @@
     </div>
 
     <div class="text-center p-8 bg-white rounded-lg shadow-lg">
-        <h1 class="text-2xl font-bold text-gray-800 mb-4">Here is an image from unsplash.com:</h1>
+        <h1 class="text-2xl font-bold text-gray-800 mb-4">Here is an image from a sharedc google photo:</h1>
         <!-- 
           This is the image tag. 
           The 'src' attribute points to the URL you provided.
           The 'alt' attribute provides alternative text for screen readers.
         -->
         <img 
-          src="https://photos.google.com/share/AF1QipNzG7RkBMmA6Qn79vlXdnkqCEbhS455hjemAFn2JNU4jQh3AwEipNcOwoO0KxBGGA?key=ek8yOGMzcC1kdGlyVXZvWllnaVdOaGJtRXNIZTR3" 
+          src="https://lh3.googleusercontent.com/pw/AP1GczMrxw4N8stSdHloFDVajcF0fEKKZ-gvL9d6eXrqbgTJg1runz07Y7rtvkXjbX_im8X6GXimzIKogK4S8lNWhvF8JP-KIh2GqLO9QDWChtCIpokVe7oj=w827-h620-no" 
           alt="Unsplash image"
           class="rounded-md mx-auto"
           onerror="this.onerror=null;this.src='https://placehold.co/557/eee/ccc?text=Image+Not+Found';"
