Add TLDR section to index.html
Added TLDR section with key insights on addressing insomnia and anxiety.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,27 @@
 <div class="container">
   <button id="toggleTheme">Toggle Theme</button>
 
-
   <h1 style="text-align: center;">Escaping Insomnia's Anxiety Trap</h1>
 
-  <p style="text-align: center;"><b>TLDR:</b> Lateral Eye Movement can Halt Anxiety</p>
-
+  <h2>TLDR</h2> 
+  
+  <p>This article describes many drug-free methods for addressing insomnia, but if you only read this TLDR section you'll still come away with the core value of this article.</p>
+  
+  <p>In order to recover from insomnia, it's essential that we <i>identify</i>, and <i>target</i>, the root cause.</p>
+  
+  <h3>The Cause</h3>
+  
+  <p>The development of insomnia follows a similar <a href="https://youtu.be/VpGsCXE-s6s?t=530">pattern</a> for the majority of people.  Initially you have no sleep issues.  Then some situation in your life causes persistent heightened anxiety, but that anxiety typically isn't about sleep, and you're still sleeping well.  Then some trigger or event will cause a poor night of sleep.  When that poor night of sleep occurs in the presence of generally-heightened anxiety, it's then possible for that anxiety to transfer over to being anxiety about sleep, and while this is natural and understandable, it's also a trap, because anxiety about sleep often leads to more sleep issues in a vicious cycle.</p>
+  
+  <p>Many insomniacs become so accustomed to this perpetual undercurrent of anxiety about sleep that they lose their awareness of that anxiety, much the way that you become accustomed to, and unaware of, a persistent body ache or pain.</p>
+  
+  <h3>Targeting the Cause</h3>
+  
+  <p>There are two keys to recovery, and both directly target the anxiety.  The first, Lateral Eye Movement (LEM), <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC6596227/#:~:text=We%20demonstrate%20that%20goal%2Ddirected,neural%20substrate%20of%20fear%20learning">suppresses the activity of the amygdala</a>, the primive part of your brain where anxiety and fight-or-flight is processed.  This enables your brain to get out of the state of panic in which it is stuck.  LEM is done while lying in bed, with your eyes closed, by gently and slowly, with no straining, looking towards your left earlobe then back towards your right earlobe and repeating this slow back-and-forth eye movement around eight times.  You may not feel anything special when doing LEM, and LEM will not typically put you to sleep immediately.  But LEM will calm down your amygdala, thereby enabling the possibility for sleep.  You may find it helpful to do a few sets of LEM throughout the night, particularly if you have just begun this practice.</p>
+  
+  <p>The second key is to stop feeding those anxiety-related emotions (fear, frustration, anger, annoyance, worry, anxiety), so that you don't put your brain back into fight-or-flight mode, by Practicing Acceptance.  To do this, before going to bed, consider that it might take hours to fall asleep, and that you might wake up many times during the night, and that you might not sleep at all, and decide sincerely and genuinely to be okay with whatever happens. By making this decision in advance, you preempt those anxiety-related emotions from developing.  While in bed, if you do feel the beginnings of any of the anxiety-related emotions, then challenge them immediately rather than let them grow.  They are the trap, so starve and eliminate the trap.  While in bed, if you find your mind fixating on the topic of sleep, this means that you haven't fully accepted whatever happens, so re-process that acceptance. Sincere acceptance enables you to literally not care about, and thus not think about, the topic of sleep.</p>
+  
+    
   <h2>Article Summary</h2>
 
   <p>I believe the most important methods discussed in this article are the Lateral Eye Movement (LEM) and Practicing Acceptance.  The other stuff can be helpful, certainly, but if you take anything from this article then those are the two to focus on, because those two methods directly target the anxiety, the root cause.</p>
