Update TLDR section heading for clarity

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <h1 style="text-align: center;">Escaping Insomnia's Anxiety Trap</h1>
 
-  <h2>TLDR - read this, if nothing else</h2> 
+  <h2>TLDR - read this section, if nothing else</h2> 
   
   <p>This article describes many drug-free methods for addressing insomnia, but if you only read this TLDR section you'll still come away with the core value of this article.</p>
   
