Change header from 'Article Summary' to 'Introduction'

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <p>The second key is to stop feeding those anxiety-related emotions (fear, frustration, anger, annoyance, worry, panic, anxiety), so that you don't put your brain back into fight-or-flight mode, by Practicing Acceptance.  To do this, before going to bed, consider that it might take hours to fall asleep, and that you might wake up many times during the night, and that you might not sleep at all, and decide sincerely and genuinely to be okay with whatever happens. By making this decision in advance, you preempt those anxiety-related emotions from developing.  While in bed, if you do feel the beginnings of any of the anxiety-related emotions, then challenge them immediately rather than let them grow.  They are the trap, so starve and eliminate the trap.  While in bed, if you find your mind fixating on the topic of sleep, this means that you haven't fully accepted whatever happens, so re-process that acceptance. Sincere acceptance enables you to literally not care about, and thus not think about, the topic of sleep.</p>
   
     
-  <h2>Article Summary</h2>
+  <h2>Introduction</h2>
 
   <p>I believe the most important methods discussed in this article are the Lateral Eye Movement (LEM) and Practicing Acceptance.  The other stuff can be helpful, certainly, but if you take anything from this article then those are the two to focus on, because those two methods directly target the anxiety, the root cause.</p>
   
